webapp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: standards-webapp
  labels:
    app.kubernetes.io/part-of: cartographer-standards-registry
