webapp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: standards-webapp
  namespace: standards-webapp
spec:
  selector:
    app: standards-webapp
  ports:
    - port: 80
      targetPort: 8000
